# ocamldev-mirror

./: .gitignore  README.md  README.txt
01_ocamlconf/: Makefile  ocamlconf.ml  ocamlmake.ml
01_ocamlconf/.svn/: entries
01_ocamlconf/.svn/text-base/: Copying.txt.svn-base  ocamlmake.ml.svn-base
02_extlib/: activebuffer.ml  activebuffer.mli  array_c.c  bitv.ml  buffer2.mli  cdk.ml  crcs.ml  dynvars.mli  extlib.doc  farray.ml  farray.mli  filename2.ml  filename2.mli  hashcons.ml  hashcons.mli  hashtbl2.ml  hashtbl2.mli  iarray.mli  lc.ml  lc.mli  log.mli  obuffer.ml  obuffer.mli  ocamlconf.ocf  ogenlex.ml  ogenlex.mli  ohashtbl.ml  omapping.mli  options.mli  oqueue.ml  oset.ml  ostack.mli  parray.ml  pc.mli  pervasives2.ml  pervasives2.mli  pp.ml  pp.mli  ptset.ml  ptset.mli  (+14 more)
03_unix2/: cdk_passwd_parsers.ml  concur.ml  getdomainname.c  glob.mli  glob_c.c  mm_c.c  pagefault.c  passwd.ml  passwd.mli  pty.mli  str2.ml  utils.ml  wordexp.ml
03_unix2/examples/: fnmatch_test.ml
04_xlib/: display.ml  lexers.ml  ll_trans.ml  shbuf.mli  shbuf.th_ml  wintbl.ml  xbuffer.ml  xequeue.ml  xlib.ml  xlib_config.ml  xtypes.mli
04_xlib/examples/: ocamlconf.ocf  xbanner.ml  xprop.ml
05_wxlib/: .cvsignore  wX_filesel.ml  wX_object.ml  wX_screen.ml  wxlib.doc
05_wxlib/examples/: .cvsignore  demo_tex.ml
10_efuns/: .gitignore  accents_mode.ml  c_mode.ml  compat_comp.ml  config.status  configure  configure.in  dired.ml  ebuffer.mli  efuns.ml  efuns_texbrowser.ml  efuns_version.ml  efuns_version.ml.in  eval.ml  frame.ml  frame.mli  html_mode.ml  html_mode.mll  interface.cmi  keymap.ml  lisp_mode.ml  ocaml_toplevel.ml  select.ml  simple.ml  simple.mli  system.ml  tab_mode.ml  tex_mode.ml  text.ml  text.mli  top_window.ml
10_efuns/el2ml/examples/: el_compat.mli
11_gwml/: .gitignore  afterstep.ml  afterstep.mll  config.status  cpp.mll  fvwm.ml  fvwm.mll  gwml.ml  gwml_args.ml  imager.ml  imager.mli  modules.ml  screen.ml  sendEvent.ml  sound.ml  stdconfig.ml  twm_l.ml  wmaker.ml
11_gwml/CVS/: Entries  Repository  Root
11_gwml/OLD/: Makefile  Makefile.cdk  Makefile.config  Makefile.config.in
11_gwml/config/CVS/: Repository
11_gwml/esd/CVS/: Entries  Repository
11_gwml/imlib/CVS/: Repository
11_gwml/no_esd/: sound.ml
11_gwml/no_esd/CVS/: Entries  Repository
11_gwml/no_imlib/CVS/: Repository
11_gwml/themes/AfterStep/CVS/: Repository
11_gwml/themes/AfterStep/Hubble/CVS/: Entries  Repository
11_gwml/themes/CVS/: Repository
11_gwml/themes/GwML/CVS/: Repository
11_gwml/themes/GwML/Hubble/CVS/: Repository
11_gwml/themes/GwML/brushed-metal/CVS/: Repository
11_gwml/themes/GwML/mini-icons/CVS/: Repository
11_gwml/themes/WindowMaker/Backgrounds/CVS/: Repository
11_gwml/themes/WindowMaker/CVS/: Repository
11_gwml/themes/WindowMaker/Pixmaps/CVS/: Repository
11_gwml/themes/WindowMaker/Themes/CVS/: Entries  Repository
11_gwml/themes/control-center/CVS/: Repository
11_gwml/themes/control-center/GwML/CVS/: Repository
efuns/: Changes.efuns  abbrevs.ml  abbrevs_mode.ml  accents_mode.ml  c_mode.mll  complex.ml  dired.ml  dune  ebuffer.ml  efuns.ml  efuns.mli  efunsrc.ml  frame.ml  interface.mli  keymap.ml  lisp_mode.mll  main.ml  makefile_mode.ml  minibuffer.ml  ocaml_mode.ml  ocaml_mode.mli  ocaml_mode.mll  ocaml_toplevel.ml  ocamlconf.ocf  ocamlconf.ocf~  search.ml  select.ml  server.ml  simple.ml  std_efunsrc.ml  system.ml  tab_mode.ml  tex_mode.mll  text.ml  text.mli  top_window.ml
efuns/el2ml/: el2ml.config  el_lexer.mll  el_to_ml.ml  el_types.ml
extlib/: .gitignore  bitv.mli  buffer2.ml  cdk.mli  cpp.ml  cpp.mll  dune  dynvars.ml  filepath.mli  format2.ml  format2.mli  iarray.ml  list2.ml  list2.mli  log.ml  log.mli  ohashtbl.mli  omap.ml  omap.mli  omapping.ml  options.ml  oqueue.mli  oset.mli  ostack.ml  ostream.ml  ostream.mli  parray.mli  pc.ml  pc2.ml  pc2.mli  printexc2.ml  ptmap.ml  ptmap.mli  sb_ralist.ml  sb_ralist2.ml  size.mli  sort2.ml  splay.ml  std.ml  std.mli  (+4 more)
gwml/: client.ml  config.cache  configurator.ml  configure  configure.in  cpp.ml  dune  dvroom.ml  gnome.ml  gwml_version.ml  gwml_version.ml.in  gwmlrc.ml  imager.ml  main.ml  ocamlconf.ocf  stddeco.ml  stdgwmlrc.ml  stdvirtual.ml  themes.ml  user.mli  wmaker.mll  wob.ml
ocamlconf/: .gitignore  Readme.txt  configure  ocamlconf_sort.ml
ocamlconf/3.08/: pa_ocamlconf.ml
ocamlconf/3.08/.svn/: entries
ocamlconf/3.09/: pa_ocamlconf.ml
ocamlconf/3.09/.svn/: entries
unix2/: .gitignore  cdk_passwd_lexers.ml  cdk_passwd_lexers.mll  concur.mli  dune  fnmatch.ml  fnmatch.mli  fnmatch_c.c  glob.ml  glob_c.c  ocamlconf.ocf  pty.ml  select.c  str2.ml  unix2.ml  unix2.mli  wordexp.mli  wordexp_c.c
unix2/examples/: .cvsignore  dune  glob_test.ml  wordexp_test.ml
unused/: bits.ml  mm.mli  wordexp.c
wxlib/: dune  ocamlconf.ocf  wX_filesel.ml  wX_panel.mli  wX_screen.mli  wX_text.mli  wX_tree.mli  wX_xterm.ml  wX_xterm.mli
wxlib/examples/: demo_button.ml  dune  ocamlconf.ocf
xlib/: .gitignore  dune  keyBind.ml  keyBind.mli  ocamlconf.ocf  shbuf.ml  wintbl.mli  xGraphics.mli  xpm.ml  xproto.ml  xrm.ml  xtypes.ml
xlib/examples/: dune  pacman.ml
