(library
 (name extlib)
 (wrapped false)
 (libraries camlp4.lib unix))

(rule
 (targets options.ml)
 (deps options.camlp4.ml)
 (action
  (run camlp4of -impl %{deps} -o %{targets})))

(rule
 (targets ogenlex.ml)
 (deps ogenlex.camlp4.ml)
 (action
  (run camlp4of -impl %{deps} -o %{targets})))

(rule
 (targets splay.ml)
 (deps splay.camlp4.ml)
 (action
  (run camlp4of -impl %{deps} -o %{targets})))

(ocamllex cpp)

(env (dev (flags (:standard -warn-error -A -unsafe-string))))
