(library
 (name unix2)
 (modules concur utils
          cdk_passwd_lexers
          cdk_passwd_parsers
          str2
          passwd
          unix2)
 (wrapped false)
 (libraries str extlib unix)
 (c_names select getdomainname))

(ocamllex cdk_passwd_lexers)
(ocamlyacc cdk_passwd_parsers)

(env
 (dev
  (flags (:standard -w -3-26-27-32 -unsafe-string))))
