(library
 (name xlib)
 (modules conv_event
          display
          eloop
          icccm
          jeton
          keyBind
          ll_trans
          shbuf
          wintbl
          x
          xA
          xGraphics
          xK
          xasync
          xauth
          xbuffer
          xdebug
          xequeue
          xfifo
          xlib
          xpm
          xproto
          xsync
          xtext
          xtypes
          zpixmap)
 (wrapped false)
 (libraries unix2))

(ocamllex xpm)

(env
 (dev
  (flags (:standard -warn-error -A -w -3-33-27-32-30-35-37-26-21-9 -unsafe-string))))
