(executables
 (names chess
        movePointer
        pacman
        sqmove
        xbanner
        xpm2ml
        xpmroot
        xprop)
 (modules chess
          movePointer
          pacman
          sqmove
          xbanner
          xpm2ml
          xpmroot
          xprop)
 (libraries xlib))


(executable
 (name sendKey)
 (modules sendKey)
 (libraries str xlib))
